// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`HeaderButtonSignIn - Snapshots > matches snapshot for default HeaderButtonSignIn 1`] = `
<button
  class="gap-2"
  data-cy="header-sign-in-btn"
  data-testid="header-sign-in-btn"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-log-in size-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m10 17 5-5-5-5"
    />
    <path
      d="M15 12H3"
    />
    <path
      d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
    />
  </svg>
  Sign in
</button>
`;

exports[`HeaderButtonSignIn - Snapshots > matches snapshot with custom className 1`] = `
<button
  class="custom-class"
  data-cy="header-sign-in-btn"
  data-testid="header-sign-in-btn"
  data-variant="secondary"
  id="header-sign-in-btn"
>
  <svg
    aria-hidden="true"
    class="lucide lucide-log-in size-4"
    fill="none"
    height="24"
    stroke="currentColor"
    stroke-linecap="round"
    stroke-linejoin="round"
    stroke-width="2"
    viewBox="0 0 24 24"
    width="24"
    xmlns="http://www.w3.org/2000/svg"
  >
    <path
      d="m10 17 5-5-5-5"
    />
    <path
      d="M15 12H3"
    />
    <path
      d="M15 3h4a2 2 0 0 1 2 2v14a2 2 0 0 1-2 2h-4"
    />
  </svg>
  Sign in
</button>
`;
